connection established between ms via rabbitmq

--- a/ms-order/src/main/resources/db/changelog/1.0/changelog-1.0.0.yml
+++ b/ms-order/src/main/resources/db/changelog/1.0/changelog-1.0.0.yml
@@ -32,3 +32,6 @@ databaseChangeLog:
               - column:
                   name: shipping_address
                   type: varchar(50)
+              - column:
+                  name: type
+                  type: varchar(50)
