--- a/ms-order/build.gradle
+++ b/ms-order/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.22.0'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.2'
 }
 
 tasks.named('test') {
