--- a/ms-tickets/build.gradle
+++ b/ms-tickets/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 
     implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.22.0'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
-4
+
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
 }
 
 tasks.named('test') {
