--- a/ms-order/build.gradle
+++ b/ms-order/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.2'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.4'
 }
 
 tasks.named('test') {
