--- a/ms-tickets/build.gradle
+++ b/ms-tickets/build.gradle
@@ -31,8 +31,7 @@ dependencies {
 
     implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.22.0'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
-
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.4'
 
 }
 
