--- a/ms-tickets/src/main/resources/application.yml
+++ b/ms-tickets/src/main/resources/application.yml
@@ -8,24 +8,5 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: validate
-
-  rabbitmq:
-
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-    listener:
-      simple:
-        retry:
-          enabled: true
-          initial-interval: 10s
-          max-attempts: 5
-          max-interval: 15s
-          multiplier: 1
-        missing-queues-fatal: false
-
-rabbitmq:
-  ticket:
-    queue: TICKET_Q
-    dlq: TICKET_DLQ
+server:
+  port: 8082
